# firefly-enemies-editor

./: CMakeLists.txt  README.md  enemyeditwindow.cpp  enemyeditwindow.h  enemyeditwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  push.sh
enemy/: enemyedit.cpp  enemyedit.h  enemyedit.ui
widgets/: mapareawidget.cpp  mapareawidget.h
